--- a/content/04-ODEs/04-ODEs-partII.ipynb
+++ b/content/04-ODEs/04-ODEs-partII.ipynb
@@ -447,7 +447,13 @@
    "source": [
     "In the above examples, we always kept the timestep $\\tau$ fixed, but in general, finding the solution to a system of ODEs might have portions in time where the solution is changing rapidly and a smaller $\\tau$ would be needed.  Likewise, is the solution is changing slowly, we can use a larger timestep.\n",
     "\n",
-    "Most ODE libraries use some form of local error estimation to measure how "
+    "Most ODE libraries use some form of local error estimation to measure how the large the error is in the solution and adjust the timestep (up or down) to achieve a desired accuracy.\n",
+    "\n",
+    "To see why this might be needed, consider an elliptical orbit.  The only thing we need to change is the initial velocity, which at perihelion is:\n",
+    "\n",
+    "$$v = \\sqrt{\\frac{GM_\\star}{a} \\frac{1+e}{1-e}}$$\n",
+    "\n",
+    "where $a$ is the length of the semi-major axis and $0 \\le e < 1$ is the eccentricity.  For an eccentric orbit, the velocity changes throughout the orbit, so when the planet is at perihelion, the solution is changing rapidly."
    ]
   },
   {
