more for tomorrow

--- a/content/05-advection/advection-partI.ipynb
+++ b/content/05-advection/advection-partI.ipynb
@@ -97,6 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Grid class\n",
+    "\n",
     "To start, let's make a class that controls our grid and holds our data, and knows how to fill our periodic boundary conditions."
    ]
   },
@@ -154,6 +156,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## FTCS\n",
+    "\n",
     "Now we can write our solver.  It will create the grid object, initialize the data (by calling a function we pass in) and then advance the solution using FTCS."
    ]
   },
@@ -354,13 +358,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Clearly, resolution is not the answer either.\n",
-    "\n",
-    "There is something more fundamental going on."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -409,11 +411,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's try a different discretization.  We can approximate the space derivative using a one-sided difference as either:\n",
+    "\n",
+    "$$ (a_x)_i \\approx \\frac{a_i - a_{i-1}}{\\Delta x} + \\mathcal{O}(\\Delta x)$$\n",
+    "\n",
+    "$$ (a_x)_i \\approx \\frac{a_{i+1} - a_i}{\\Delta x} + \\mathcal{O}(\\Delta x)$$\n",
+    "\n",
+    "We'll choose the one that is an *upwinded* difference&mdash;this means we want to make use of the points from the direction that information is flowing.  In our case, $u > 0$, so we want to use the points to the left of $i$ in approximating our derivative.\n",
+    "\n",
+    "Chosing this difference makes us first-order accurate in space and time.  Our difference equation is:\n",
+    "\n",
+    "$$\\frac{a_i^{n+1} - a_i^n}{\\Delta t} = - u \\frac{a_i^n - a_{i-1}^n}{\\Delta x}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Exercise:**\n",
+    "\n",
+    "Implement the first-order upwind method for linear advection and run the top hat initial conditions&mdash;how does the solution compare to FTCS?\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convergence\n",
+    "\n",
+    "In order to see whether our methods are working as designed, we need to be able to measure the convergence rate.  With the ODE orbit problem, we had a single point (the current position of Earth) at the end of our integration.  Now we have $N$ points at the new time.  So we need to define a metric that allows us to quantify the error.\n",
+    "\n",
+    "We'll define a vector norm, the $L_2$ norm, for a set of discrete data $\\phi_i$, as:\n",
+    "\n",
+    "$$\\|\\phi\\|_2 = \\left ( \\Delta x \\sum_{i=0}^{N-1} \\phi_i^2 \\right )^{1/2}$$\n",
+    "\n",
+    "and then we can define an error as $e_i = a_i - a^\\mathrm{exact}(x_i)$ for all the points in our domain and compute an error, $\\epsilon$ as $\\| e\\|_2$.  Further, for our problem, after 1 period, we know that the exact solution is just the initial data, so we can write:\n",
+    "\n",
+    "$$\\epsilon = \\| a_i^\\mathrm{final} - a_i^\\mathrm{initial} \\|_2\n",
+    "   = \\left ( \\Delta x \\sum_{i=0}^{N-1} (a_i^\\mathrm{final} - a_i^\\mathrm{initial} )^2 \\right )^{1/2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Exercise:**\n",
+    "\n",
+    "Compute the $L_2$ norm of the error for our upwind method.  In order for it to make sense, we need to use smooth data, so pick the initial conditions as:\n",
+    "\n",
+    "$$a(x, t=0) = \\sin(2\\pi x)$$\n",
+    "    \n",
+    "Now vary the number of grid points and measure the error and estimate the rate at which it converges.\n",
+    "    \n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
