--- a/content/05-advection/05-advection-partII.ipynb
+++ b/content/05-advection/05-advection-partII.ipynb
@@ -21,14 +21,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ultimately we are interested in conservation laws, so we want a method that respects conservation.  We'll look at this with advection first.\n"
+    "Ultimately we are interested in conservation laws, so we want a method that respects conservation.  We'll look at this with advection first.\n",
+    "\n",
+    "![discretization types](grids.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell-averages"
+    "## Cell-averages\n",
+    "\n",
+    "![finite-volume grid](fv_grid.png)"
    ]
   },
   {
@@ -56,7 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Riemann problem"
+    "## Riemann problem\n",
+    "\n",
+    "![advection Riemann problem](riemann.png)"
    ]
   },
   {
@@ -104,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
