--- a/content/05-advection/05-advection-partI.ipynb
+++ b/content/05-advection/05-advection-partI.ipynb
@@ -468,7 +468,7 @@
     "\n",
     "Compute the $L_2$ norm of the error for our upwind method.  In order for it to make sense, we need to use smooth data, so pick the initial conditions as:\n",
     "\n",
-    "$$a(x, t=0) = \\sin(2\\pi x)$$\n",
+    "$$a(x, t=0) = 1 + \\frac{1}{2} \\sin(2\\pi x)$$\n",
     "    \n",
     "Now vary the number of grid points and measure the error and estimate the rate at which it converges.\n",
     "    \n",
