--- a/content/05-advection/05-advection-partII.ipynb
+++ b/content/05-advection/05-advection-partII.ipynb
@@ -55,64 +55,152 @@
    "source": [
     "Now consider our linear advection equation, written in conservative form:\n",
     "\n",
-    "$$\\frac{\\partial a}{\\partial t} = -\\frac{\\partial f(a)}{\\partial x}$$\n",
+    "$$\\frac{\\partial a}{\\partial t} = -\\frac{\\partial F(a)}{\\partial x}$$\n",
     "\n",
-    "where $f(a) = ua$ is the flux.\n",
+    "where $F(a) = ua$ is the flux.\n",
     "\n",
     "Let's average (integrate) this equation over a zone (from $[x_{i-1/2}, x_{i+1/2}]$):\n",
     "\n",
     "$$\\frac{1}{\\Delta x} \\int_{x-1/2}^{x+1/2} \\frac{\\partial a}{\\partial t} dx = \n",
-    "   -\\frac{1}{\\Delta x} \\int_{x-1/2}^{x+1/2} \\frac{\\partial f}{\\partial x} dx$$\n",
+    "   -\\frac{1}{\\Delta x} \\int_{x-1/2}^{x+1/2} \\frac{\\partial F}{\\partial x} dx$$\n",
     "   \n",
     "we can recognize the left is the time-derivative of the average of $a$ and the right, via the divergence theorem is just the flux different through the boundary of the zone:\n",
     "\n",
     "$$\\frac{\\partial}{\\partial t} \\langle a\\rangle_i = -\\frac{1}{\\Delta x}\n",
-    "   \\left [ f_{i+1/2} - f_{i-1/2} \\right ]$$"
+    "   \\left [ F_{i+1/2} - F_{i-1/2} \\right ]$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reconstruction"
+    "## Time update"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Riemann problem\n",
+    "Let's start with a first-order update in time.  We can use the Euler method we already say, in which case our update appears as:\n",
     "\n",
-    "![advection Riemann problem](riemann.png)"
+    "$$\\langle a\\rangle_i^{n+1} = \\langle a\\rangle_i^{n} - \\frac{\\Delta t}{\\Delta x} (F_{i+1/2}^n - F_{i-1/2}^n)$$\n",
+    "\n",
+    "We expect this to be first order accurate in time.  Notice that the fluxes are evaluated at the old time."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Second-order"
+    "## Reconstruction and the Riemann problem"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We need the value of the flux on the interface, $F_{i+1/2}$, we find this as:\n",
+    "\n",
+    "$$[F(a)]_{i+1/2} = F(a_{i+1/2})$$\n",
+    "\n",
+    "So now we need to find the interface state, $a_{i+1/2}$.  \n",
+    "\n",
+    "Getting the value of $a$ on the interface from the average, $\\langle a \\rangle$ is called *reconstruction*.  It means we need to infer how $a$ actually varies throughout the cell just from the information we have about its average value.  There are a variety of methods we can use (some of which we will explore later).  For now, we will do the simplest, and assume that $a(x)$ is constant in each cell:\n",
+    "\n",
+    "$$a_{i+1/2,L} = a_i^n$$\n",
+    "$$a_{i+1/2,R} = a_{i+1}^n$$\n",
+    "\n",
+    "Notice that we actually have 2 values for the interface state when we do this, one coming from each side of the interface&mdash;we label these as the left and right states:\n",
+    "\n",
+    "![left and right states for advection](riemann-adv-mol.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to resolve this degeneracy&mdash;which of the two states (or what combination of them) is the correct interface state?  This is where the physics of the problem comes into play.  This is called the *Riemann problem*.\n",
+    "\n",
+    "For advection it is easy.  We know that for $u > 0$ that $a(x)$ moves from left to right, so the correct state on the interface is the left state&mdash;this is upwinding.\n",
+    "\n",
+    "$$\n",
+    "a_{i+1/2} = \\mathcal{R}(a_{i+1/2,L}, a_{i+1/2,R}) = \n",
+    "\\left \\{ \n",
+    "\\begin{array}{c}\n",
+    " a_{i+1/2,L} \\quad u > 0 \\\\\n",
+    " a_{i+1/2,R} \\quad u < 0 \n",
+    "\\end{array}\n",
+    "\\right .\n",
+    "$$\n",
+    "\n",
+    "where we indicate the Riemann problem as $\\mathcal{R}(a_{i+1/2,L},a_{i+1/2,R})$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the advection equation, with $u > 0$, our interface states are \n",
+    "\n",
+    "$$F_{i+1/2} = F(a_{i+1/2}) = u a_{i+1/2} = u \\langle a \\rangle_i$$\n",
+    "\n",
+    "$$F_{i-1/2} = F(a_{i-1/2}) = u a_{i-1/2} = u \\langle a \\rangle_{i-1}$$\n",
+    "\n",
+    "Inserting these into our difference equation, we have:\n",
+    "\n",
+    "$$\\langle a \\rangle_i^{n+1} = \\langle a \\rangle_i^n - \\frac{u \\Delta t}{\\Delta x} (\\langle a \\rangle_i^n - \\langle a \\rangle_{i-1}^n)$$\n",
+    "\n",
+    "This is precisely the upwind finite-difference scheme we saw earlier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second-order\n",
+    "\n",
+    "To get a more accurate solution, we need to handle both the space and time discretizations in a higher order fashion.\n",
+    "\n",
+    "First, let's look again at the definition of the average:\n",
+    "\n",
+    "$$\\langle a \\rangle_i = \\frac{1}{\\Delta x} \\int_{x_{i-1/2}}^{x_{i+1/2}} a(x) dx$$\n",
+    "\n",
+    "let's substitute in a Taylor expansion about $x_i$:\n",
+    "\n",
+    "$$a(x) = a(x_i) + \\left . \\frac{\\partial a}{\\partial x} \\right |_i (x - x_i) + \\frac{1}{2} \\left . \\frac{\\partial^2 a}{\\partial x^2} \\right |_i (x - x_i)^2 + \\mathcal{O}(\\Delta x^3)$$\n",
+    "\n",
+    "inserting this into our integral, we have:\n",
+    "\n",
+    "$$\\langle a \\rangle_i = \\frac{1}{\\Delta x} \\int_{x_{i-1/2}}^{x_{i+1/2}} \n",
+    "    \\left [a(x_i) + \\left . \\frac{\\partial a}{\\partial x} \\right |_i (x - x_i) + \\frac{1}{2} \\left . \\frac{\\partial^2 a}{\\partial x^2} \\right |_i (x - x_i)^2 + \\mathcal{O}(\\Delta x^3) \\right ] dx$$\n",
+    "\n",
+    "Look at the terms:\n",
+    "\n",
+    "* the first term is just a constant, so it's integral is just $a(x_i) \\Delta x$\n",
+    "* the second term is odd over the interface $[x_{i-1/2},x_{i+1/2}]$, so it integrates to 0\n",
+    "* the third term will integrate to something like $(\\Delta x)^3$ (before we divide by the $\\Delta x$ out front)\n",
+    "\n",
+    "This means that\n",
+    "\n",
+    "$$\\langle a \\rangle_i = a(x_i) + \\mathcal{O}(\\Delta x^2)$$\n",
+    "\n",
+    "So if we work to second-order in space, then we don't need to worry about the difference between the cell average and cell-center.  \n",
+    "\n",
+    "To make the notation easier, we'll drop the $\\langle \\rangle$ from now forward."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 2 broad ways that we can handle the time integration to get more accuracy:\n",
+    "\n",
+    "* Predict our interface states at the midpoint in time using a Taylor expansion (in both space and time).  This would result in a time-centered interface state.  This procedure is sometimes called *characteristic tracing*.  \n",
+    "\n",
+    "* Just construct high-order interface states in space, ignoring how they evolve in time, and use a high-order integrator (like Runge-Kutta) to handle the time integration.  This is called the *method-of-lines* approach.\n",
+    "\n",
+    "We'll focus on the second approach (method-of-lines).  For details on the first, see my notes: [Computational Hydrodynamics for Astrophysics](https://github.com/Open-Astrophysics-Bookshelf/numerical_exercises)"
+   ]
   },
   {
    "cell_type": "code",
