--- a/content/05-advection/05-advection-partIII.ipynb
+++ b/content/05-advection/05-advection-partIII.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementation"
+    "## Implementation"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
