--- a/content/05-advection/05-advection-partIII.ipynb
+++ b/content/05-advection/05-advection-partIII.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "and this is conservative, e.g.,\n",
     "\n",
-    "$$ \\int_{x_{i-1/2}}^{x_{i+1/2}} a(x) dx = a_i$$\n",
+    "$$\\frac{1}{\\Delta x} \\int_{x_{i-1/2}}^{x_{i+1/2}} a(x) dx = a_i$$\n",
     "\n",
     "Then we construct the interface states by following this slope from the value $a_i$ at $x_i$ to the two interfaces for that zone, giving\n",
     "\n",
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flux_update(gr, u, a, limit=False):\n",
+    "def flux_update(gr, u, a):\n",
     "    \"\"\"compute -div{F} for linear advection\"\"\"\n",
     "\n",
     "    # slope\n",
@@ -416,7 +416,7 @@
    },
    "outputs": [],
    "source": [
-    "def flux_update(gr, u, a, limit=False):\n",
+    "def flux_update(gr, u, a):\n",
     "    \"\"\"compute -div{F} for linear advection\"\"\"\n",
     "\n",
     "    # slope\n",
