--- a/content/06-burgers/06-burgers.ipynb
+++ b/content/06-burgers/06-burgers.ipynb
@@ -31,7 +31,13 @@
     "\n",
     "$$u_t + \\left [ \\frac{1}{2} u^2 \\right ]_x = 0$$\n",
     "\n",
-    "so the flux is $F(u) = \\frac{1}{2} u^2$.\n"
+    "so the flux is $F(u) = \\frac{1}{2} u^2$.\n",
+    "\n",
+    "In the finite volume approach, we integrate over the volume of a cell to get the update:\n",
+    "\n",
+    "$$\\frac{\\partial \\langle u \\rangle_i}{\\partial t} = - \\frac{1}{\\Delta x} (F_{i+1/2} - F_{i-1/2})$$\n",
+    "\n",
+    "To second order accurate, as we saw previously, $\\langle u \\rangle_i \\approx u_i$, so we'll drop the $\\langle \\rangle$ here."
    ]
   },
   {
@@ -170,6 +176,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One we have the interface state, $u_{i+1/2}$, we can compute the flux:\n",
+    "\n",
+    "$$F_{i+1/2} = \\frac{1}{2} u_{i+1/2}^2$$\n",
+    "\n",
+    "and then the divergence of the fluxes:\n",
+    "\n",
+    "$$-\\frac{1}{\\Delta x} (F_{i+1/2} - F_{i-1/2}) = -\\frac{1}{\\Delta x} \\left ( \\frac{1}{2} u_{i+1/2}^2 - \\frac{1}{2} u_{i-1/2}^2 \\right )$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -178,7 +197,7 @@
     "def flux_update(gr, u):\n",
     "    \"\"\"compute -div{F} for linear advection\"\"\"\n",
     "\n",
-    "    # slope\n",
+    "    # slope -- we'll do the minmod limiter\n",
     "    \n",
     "    # dl = u_i - u_{i-1}\n",
     "    dl = gr.scratch_array()\n",
