some updates after class

--- a/content/05-advection/05-advection-partII.ipynb
+++ b/content/05-advection/05-advection-partII.ipynb
@@ -53,7 +53,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now consider our linear advection equation, written in conservative form:\n",
+    "Now consider our linear advection equation,\n",
+    "\n",
+    "$$\\frac{\\partial a}{\\partial t} = -u\\frac{\\partial a}{\\partial x}$$\n",
+    "\n",
+    "written in conservative form:\n",
     "\n",
     "$$\\frac{\\partial a}{\\partial t} = -\\frac{\\partial F(a)}{\\partial x}$$\n",
     "\n",
@@ -81,7 +85,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with a first-order update in time.  We can use the Euler method we already say, in which case our update appears as:\n",
+    "Let's start with a first-order update in time.  We can use the Euler method we already saw,\n",
+    "\n",
+    "$$\\frac{\\partial \\langle a \\rangle}{\\partial t} \\approx \\frac{\\langle a\\rangle^{n+1} - \\langle a\\rangle^{n}}{\\Delta t}$$\n",
+    "\n",
+    "in which case our update appears as:\n",
     "\n",
     "$$\\langle a\\rangle_i^{n+1} = \\langle a\\rangle_i^{n} - \\frac{\\Delta t}{\\Delta x} (F_{i+1/2}^n - F_{i-1/2}^n)$$\n",
     "\n",
@@ -99,7 +107,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need the value of the flux on the interface, $F_{i+1/2}$, we find this as:\n",
+    "We need the value of the flux on the interface, $F_{i+1/2}$, we find this using the analytic expression\n",
+    "for the flux, $F(a)$, as:\n",
     "\n",
     "$$[F(a)]_{i+1/2} = F(a_{i+1/2})$$\n",
     "\n",
