--- a/content/06-burgers/06-burgers.ipynb
+++ b/content/06-burgers/06-burgers.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -364,6 +364,13 @@
     "\n",
     "g = burgers_mol(nx, C, tmax, init_cond=sine)\n",
     "fig = g.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keep in mind that although our method ideally converges as second order in space and time, the slope limiter we use kicks in near discontinuities and reduces the converges locally to first order there."
    ]
   },
   {
