--- a/content/06-burgers/06-exercises.ipynb
+++ b/content/06-burgers/06-exercises.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "**1. Conservative vs. non-conservative form:**\n",
