fix some formatting + requirements

--- a/content/07-euler/07-euler-eigen.ipynb
+++ b/content/07-euler/07-euler-eigen.ipynb
@@ -40,6 +40,8 @@
    "source": [
     "# Euler equations eigensystem\n",
     "\n",
+    "## Primitive variable form\n",
+    "\n",
     "The Euler equations in primitive variable form, ${\\bf q} = (\\rho, u, p)^\\intercal$ appear as:\n",
     "\n",
     "$${\\bf q}_t + {\\bf A}({\\bf q}) {\\bf q}_x = 0$$\n",
@@ -148,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Right Eigenvectors"
+    "### Right Eigenvectors"
    ]
   },
   {
@@ -179,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0-th right eigenvector "
+    "#### 0-th right eigenvector "
    ]
   },
   {
@@ -255,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1-st right eigenvector"
+    "#### 1-st right eigenvector"
    ]
   },
   {
@@ -334,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-nd right eigenvector"
+    "#### 2-nd right eigenvector"
    ]
   },
   {
@@ -460,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Left Eigenvectors"
+    "### Left Eigenvectors"
    ]
   },
   {
@@ -564,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0-th left eigenvector"
+    "#### 0-th left eigenvector"
    ]
   },
   {
@@ -603,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1-st left eigenvector"
+    "#### 1-st left eigenvector"
    ]
   },
   {
@@ -642,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-nd left eigenvector"
+    "#### 2-nd left eigenvector"
    ]
   },
   {
@@ -681,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Entropy formulation\n",
+    "## Entropy formulation\n",
     "\n",
     "here we write the system in terms of ${\\bf q}_s = (\\rho, u, s)^\\intercal$, where the system is\n",
     "\n",
