--- a/content/07-euler/07-euler-riemann.ipynb
+++ b/content/07-euler/07-euler-riemann.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rarefaction solution\n",
+    "### Rarefaction solution\n",
     "\n",
     "To understand a rarefaction, let's replace the pressure equation in our system with an entropy equation.  Entropy evolves according to:\n",
     "\n",
