--- a/content/07-euler/07-euler-riemann-sampling.ipynb
+++ b/content/07-euler/07-euler-riemann-sampling.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy.optimize as optimize"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -114,7 +125,252 @@
     "For a right rarefaction:\n",
     "\n",
     "$$S_\\mathrm{head} = u_R + c_R$$\n",
-    "$$S_\\mathrm{tail} = u_\\star + c_\\star$$\n"
+    "$$S_\\mathrm{tail} = u_\\star + c_\\star$$\n",
+    "\n",
+    "Note that $|S_\\mathrm{head}| > |S_\\mathrm{tail}|$, so the rarefaction spreads out over time. \n",
+    "\n",
+    "Also, it is possible for the rarefaction to span the interface&mdash;with the head on one side and the tail on the other.  We'll deal with this shortly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Density\n",
+    "\n",
+    "To compute the rarefaction speed, we need to know the density in the star state (so we can evaluate $c_\\star$).  We will need this anyway for either a shock or a rarefaction to compute the final fluxes if a star state is on the interface.\n",
+    "\n",
+    "For a rarefaction, since entropy is constant, we have:\n",
+    "\n",
+    "$$\\frac{p_s}{\\rho_s^\\gamma} = \\frac{p_\\star}{\\rho_\\star^\\gamma}$$\n",
+    "\n",
+    "where $s \\in {L, R}$ is the state outside of the star region.\n",
+    "\n",
+    "For a shock, the jump conditions tell us the density:\n",
+    "\n",
+    "$$\\rho_{\\star,s} = {\\rho_s} \\frac{\\frac{p_\\star}{p_R} + \\frac{\\gamma-1}{\\gamma+1}}{\\frac{p_\\star}{p_R}\\frac{\\gamma-1}{\\gamma+1} + 1}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sampling\n",
+    "\n",
+    "The sampling procedure is the following:\n",
+    "\n",
+    "* Look at the sign of the contact speed, $S_0$:\n",
+    "\n",
+    "  * If $S_0 > 0$ then we are either in the $L$ or $L_\\star$ state\n",
+    "  \n",
+    "    * Look at the speed of the left shock or rarefaction to determine\n",
+    "      if we are in the $L$ or $L_\\star$ state\n",
+    "\n",
+    "  * If $S_0 < 0$ then we are either in the $R$ or $R_\\star$ state\n",
+    "\n",
+    "    * Look at the speed of the right shock or rarefaction to determine\n",
+    "      if we are in the $R$ or $R_\\star$ state\n",
+    "\n",
+    "The one catch is when the rarefaction spans the interface, e.g., $S_\\mathrm{head} < 0 < S_\\mathrm{tail}$ for a left rarefaction.\n",
+    "\n",
+    "![rarefaction spanning the interface](rarefaction_span.png)\n",
+    "\n",
+    "In this case, we would use the Riemann invariant to find the state at the location of the interface inside the structure of the rarefaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "\n",
+    "Here we extend our `RiemannProblem` class to add methods to find the solution if we are a shock or rarefaction and to do the sampling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class State:\n",
+    "    \"\"\" a simple object to hold a primitive variable state \"\"\"\n",
+    "\n",
+    "    def __init__(self, p=1.0, u=0.0, rho=1.0):\n",
+    "        self.p = p\n",
+    "        self.u = u\n",
+    "        self.rho = rho\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"rho: {self.rho}; u: {self.u}; p: {self.p}\"\n",
+    "\n",
+    "class RiemannProblem:\n",
+    "    \"\"\" a class to define a Riemann problem.  It takes a left\n",
+    "        and right state.  Note: we assume a constant gamma \"\"\"\n",
+    "\n",
+    "    def __init__(self, left_state, right_state, gamma=1.4):\n",
+    "        self.left = left_state\n",
+    "        self.right = right_state\n",
+    "        self.gamma = gamma\n",
+    "\n",
+    "        self.ustar = None\n",
+    "        self.pstar = None\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"pstar = {self.pstar}, ustar = {self.ustar}\"\n",
+    "\n",
+    "    def u_hugoniot(self, p, side):\n",
+    "        \"\"\"define the Hugoniot curve, u(p).\"\"\"\n",
+    "\n",
+    "        if side == \"left\":\n",
+    "            state = self.left\n",
+    "            s = 1.0\n",
+    "        elif side == \"right\":\n",
+    "            state = self.right\n",
+    "            s = -1.0\n",
+    "\n",
+    "        c = np.sqrt(self.gamma*state.p/state.rho)\n",
+    "\n",
+    "        if p < state.p:\n",
+    "            # rarefaction\n",
+    "            u = state.u + s*(2.0*c/(self.gamma-1.0))* \\\n",
+    "                (1.0 - (p/state.p)**((self.gamma-1.0)/(2.0*self.gamma)))\n",
+    "        else:\n",
+    "            # shock\n",
+    "            beta = (self.gamma+1.0)/(self.gamma-1.0)\n",
+    "            u = state.u + s*(2.0*c/np.sqrt(2.0*self.gamma*(self.gamma-1.0)))* \\\n",
+    "                (1.0 - p/state.p)/np.sqrt(1.0 + beta*p/state.p)\n",
+    "\n",
+    "        return u\n",
+    "\n",
+    "    def find_star_state(self, p_min=0.001, p_max=1000.0):\n",
+    "        \"\"\" root find the Hugoniot curve to find ustar, pstar \"\"\"\n",
+    "\n",
+    "        # we need to root-find on\n",
+    "        self.pstar = optimize.brentq(\n",
+    "            lambda p: self.u_hugoniot(p, \"left\") - self.u_hugoniot(p, \"right\"),\n",
+    "            p_min, p_max)\n",
+    "        self.ustar = self.u_hugoniot(self.pstar, \"left\")\n",
+    "\n",
+    "\n",
+    "    def shock_solution(self, sgn, state):\n",
+    "        \"\"\"return the interface solution considering a shock\"\"\"\n",
+    "\n",
+    "        p_ratio = self.pstar/state.p\n",
+    "        c = np.sqrt(self.gamma*state.p/state.rho)\n",
+    "\n",
+    "        # Toro, eq. 4.52 / 4.59\n",
+    "        S = state.u + sgn*c*np.sqrt(0.5*(self.gamma + 1.0)/self.gamma*p_ratio +\n",
+    "                                    0.5*(self.gamma - 1.0)/self.gamma)\n",
+    "\n",
+    "        # are we to the left or right of the shock?\n",
+    "        if (self.ustar < 0 and S < 0) or (self.ustar > 0 and S > 0):\n",
+    "            # R/L region\n",
+    "            solution = state\n",
+    "        else:\n",
+    "            # * region -- get rhostar from Toro, eq. 4.50 / 4.57\n",
+    "            gam_fac = (self.gamma - 1.0)/(self.gamma + 1.0)\n",
+    "            rhostar = state.rho * (p_ratio + gam_fac)/(gam_fac * p_ratio + 1.0)\n",
+    "            solution = State(rho=rhostar, u=self.ustar, p=self.pstar)\n",
+    "\n",
+    "        return solution\n",
+    "\n",
+    "    def rarefaction_solution(self, sgn, state):\n",
+    "        \"\"\"return the interface solution considering a rarefaction wave\"\"\"\n",
+    "\n",
+    "        # find the speed of the head and tail of the rarefaction fan\n",
+    "\n",
+    "        # isentropic (Toro eq. 4.54 / 4.61)\n",
+    "        p_ratio = self.pstar/state.p\n",
+    "        c = np.sqrt(self.gamma*state.p/state.rho)\n",
+    "        cstar = c*p_ratio**((self.gamma-1.0)/(2*self.gamma))\n",
+    "\n",
+    "        lambda_head = state.u + sgn*c\n",
+    "        lambda_tail = self.ustar + sgn*cstar\n",
+    "\n",
+    "        gam_fac = (self.gamma - 1.0)/(self.gamma + 1.0)\n",
+    "\n",
+    "        if (sgn > 0 and lambda_head < 0) or (sgn < 0 and lambda_head > 0):\n",
+    "            # R/L region\n",
+    "            solution = state\n",
+    "\n",
+    "        elif (sgn > 0 and lambda_tail > 0) or (sgn < 0 and lambda_tail < 0):\n",
+    "            # * region, we use the isentropic density (Toro 4.53 / 4.60)\n",
+    "            solution = State(rho = state.rho*p_ratio**(1.0/self.gamma),\n",
+    "                             u = self.ustar, p = self.pstar)\n",
+    "\n",
+    "        else:\n",
+    "            # we are in the fan -- Toro 4.56 / 4.63\n",
+    "            rho = state.rho * (2/(self.gamma + 1.0) -\n",
+    "                               sgn*gam_fac*state.u/c)**(2.0/(self.gamma-1.0))\n",
+    "            u = 2.0/(self.gamma + 1.0) * ( -sgn*c + 0.5*(self.gamma - 1.0)*state.u)\n",
+    "            p = state.p * (2/(self.gamma + 1.0) -\n",
+    "                           sgn*gam_fac*state.u/c)**(2.0*self.gamma/(self.gamma-1.0))\n",
+    "            solution = State(rho=rho, u=u, p=p)\n",
+    "\n",
+    "        return solution\n",
+    "\n",
+    "    def sample_solution(self):\n",
+    "        \"\"\"given the star state (ustar, pstar), find the state on the interface\"\"\"\n",
+    "\n",
+    "        if self.ustar < 0:\n",
+    "            # we are in the R* or R region\n",
+    "            state = self.right\n",
+    "            sgn = 1.0\n",
+    "        else:\n",
+    "            # we are in the L* or L region\n",
+    "            state = self.left\n",
+    "            sgn = -1.0\n",
+    "\n",
+    "        # is the non-contact wave a shock or rarefaction?\n",
+    "        if self.pstar > state.p:\n",
+    "            # compression! we are a shock\n",
+    "            solution = self.shock_solution(sgn, state)\n",
+    "\n",
+    "        else:\n",
+    "            # rarefaction\n",
+    "            solution = self.rarefaction_solution(sgn, state)\n",
+    "\n",
+    "        return solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rho: 0.4263194281784952; u: 0.9274526200489498; p: 0.30313017805064685\n"
+     ]
+    }
+   ],
+   "source": [
+    "left = State(p=1.0, u=0.0, rho=1.0)\n",
+    "right = State(p=0.1, u=0.0, rho=0.125)\n",
+    "\n",
+    "rp = RiemannProblem(left, right)\n",
+    "rp.find_star_state()\n",
+    "\n",
+    "interface_state = rp.sample_solution()\n",
+    "print(interface_state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have the interface state, we can compute the conservative fluxes:\n",
+    "\n",
+    "$$F_{i+1/2} = \\left ( \\begin{array}{c}\n",
+    "                             \\rho_{i+1/2} u_{i+1/2} \\\\\n",
+    "                             \\rho_{i+1/2} (u_{i+1/2})^2 + p_{i+1/2} \\\\\n",
+    "                             u_{i+1/2} p_{i+1/2} / (\\gamma - 1)  +\n",
+    "                             \\frac{1}{2} \\rho_{i+1/2} (u_{i+1/2})^3 +\n",
+    "                             u_{i+1/2} p_{i+1/2}\n",
+    "                            \\end{array} \\right )$$"
    ]
   },
   {
