add comment about shock capturing

--- a/content/06-burgers/06-burgers-methods.ipynb
+++ b/content/06-burgers/06-burgers-methods.ipynb
@@ -513,6 +513,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that at the end, the shock is at a position of 0.8 and that it started at 0.5.  We can just compute the shock speed as $(x_\\mathrm{final} - x_\\mathrm{initial}) / \\Delta t$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -530,6 +537,13 @@
    ],
    "source": [
     "(0.8 - 0.5)/tmax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the expected result from the jump conditions.  Because we solve the Riemann problem, which knows about the jump conditions, we get the shock speed correct.  These methods are therefore sometimes called *shock-capturing methods*."
    ]
   },
   {
