update some text to make it more clear

--- a/content/05-advection/05-advection-partIII.ipynb
+++ b/content/05-advection/05-advection-partIII.ipynb
@@ -88,7 +88,11 @@
     "\n",
     "$$\\frac{1}{\\Delta x} \\int_{x_{i-1/2}}^{x_{i+1/2}} a(x) dx = a_i$$\n",
     "\n",
-    "Then we construct the interface states by following this slope from the value $a_i$ at $x_i$ to the two interfaces for that zone, giving\n",
+    "Then we construct the interface states by following this slope from the value $a_i$ at $x_i$ to the two interfaces for that zone.  Note that zone $i$ connects to the right state on the left interface ($i-1/2$) and the left state on the right interface ($i+1/2$):\n",
+    "\n",
+    "![advection states](advection-states.png)\n",
+    "\n",
+    "Therefore, we have:\n",
     "\n",
     "$$a_{i-1/2,R} = a(x_i - \\Delta x/2) = a_i - \\frac{1}{2} \\Delta a_i$$\n",
     "\n",
@@ -195,6 +199,19 @@
     "where \n",
     "\n",
     "$$g(y_i) = -\\frac{1}{\\Delta x} \\left [ F(a_{i+1/2}) - F(a_{i-1/2}) \\right ]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to store interface values (which we've been denoting with half-integer subscripts, like $a_{i-1/2}$) as arrays which only take integer indices.  We will adopt the common convention that when an array refers to an interface state, it denotes the left interface of a cell.\n",
+    "\n",
+    "E.g., `aint[i]}` means $a_{i-1/2}$\n",
+    "\n",
+    "This is illustrated below for arrays `a[]` which stores cell center quantities and `aint[]` which stores interface values:\n",
+    "\n",
+    "![array notation for interfaces](array-labels.png)"
    ]
   },
   {
