--- a/content/07-euler/07-euler-riemann-sampling.ipynb
+++ b/content/07-euler/07-euler-riemann-sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +142,13 @@
     "\n",
     "For a rarefaction, since entropy is constant, we have:\n",
     "\n",
-    "$$\\frac{p_s}{\\rho_s^\\gamma} = \\frac{p_\\star}{\\rho_\\star^\\gamma}$$\n",
+    "$$\\frac{p_s}{\\rho_s^\\gamma} = \\frac{p_\\star}{\\rho_{\\star,s}^\\gamma}$$\n",
     "\n",
     "where $s \\in {L, R}$ is the state outside of the star region.\n",
     "\n",
     "For a shock, the jump conditions tell us the density:\n",
     "\n",
-    "$$\\rho_{\\star,s} = {\\rho_s} \\frac{\\frac{p_\\star}{p_R} + \\frac{\\gamma-1}{\\gamma+1}}{\\frac{p_\\star}{p_R}\\frac{\\gamma-1}{\\gamma+1} + 1}$$\n"
+    "$$\\rho_{\\star,s} = {\\rho_s} \\frac{\\frac{p_\\star}{p_s} + \\frac{\\gamma-1}{\\gamma+1}}{\\frac{p_\\star}{p_s}\\frac{\\gamma-1}{\\gamma+1} + 1}$$\n"
    ]
   },
   {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
