--- a/content/07-euler/07-euler-riemann.ipynb
+++ b/content/07-euler/07-euler-riemann.ipynb
@@ -154,7 +154,11 @@
     "\n",
     "$$u = - \\int \\frac{dp}{\\rho c}$$\n",
     "\n",
-    "but for a gamma-law equation of state, we can do the integral and we find:\n",
+    "For a gamma-law equation of state, constant entropy means:\n",
+    "\n",
+    "$$P = K \\rho^\\gamma$$\n",
+    "\n",
+    "and we can do the integral and we find:\n",
     "\n",
     "$$u + \\frac{2c}{\\gamma - 1} = \\mbox{constant}$$\n",
     "\n",
@@ -462,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
