--- a/content/reaction_networks/ODEs-implicit.ipynb
+++ b/content/reaction_networks/ODEs-implicit.ipynb
@@ -39,7 +39,9 @@
     "$$y(t) = e^{-t} - e^{-10^3 t}$$\n",
     "\n",
     "We see that there are 2 characteristic timescales in the solution: $\\tau_1 = 1$ and $\\tau_2 = 10^{-3}$.  This is a\n",
-    "*stiff* ODE. \n"
+    "*stiff* ODE. \n",
+    "\n",
+    "(This example comes from Byrne and Hindmarsh 1986)."
    ]
   },
   {
