--- a/content/reaction_networks/ODEs-implicit.ipynb
+++ b/content/reaction_networks/ODEs-implicit.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the backward-Euler / implicit method remains stable even for $tau$ larger than the shortest timescale of change in the problem."
+    "We see that the backward-Euler / implicit method remains stable even for $\\tau$ larger than the shortest timescale of change in the problem."
    ]
   },
   {
